<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="@drawable/logo"
    android:padding="10dp"
    tools:context=".Four">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView12"
            style="@style/HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:text="@string/t4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/textView12"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/se"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#0E0E0E" />

            <Button
                android:id="@+id/search"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#000000"
                android:padding="10dp"
                android:text="@string/sbtn"
                android:textColor="#FFEB3B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textView12"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/stname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#090909" />

            <EditText
                android:id="@+id/enroll"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enr"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#090909" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="12dp"
                    android:text="@string/date1"
                    android:textColor="#0C0C0C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/date"
                    android:inputType="date"
                    android:paddingLeft="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#090909" />

            </LinearLayout>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fee"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#090909" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="11dp"
                    android:text="@string/f0"
                    android:textColor="#0C0C0C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/f1"
                        android:textColor="#070707"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/f2"
                        android:textColor="#070707"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/f3"
                        android:textColor="#070707"
                        android:textStyle="bold" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/AddFee"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView12"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="#000000"
                android:text="@string/subbtn"
                android:textColor="#FFEB3B" />
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>