<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="@drawable/logo"
    android:padding="10dp"
    tools:context=".Two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView10"
            style="@style/HeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/t2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/sid"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#090909"
                android:textColorHint="#0E0E0E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/src"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:padding="5dp"
                android:text="@string/sbtn"
                android:textColor="#FFEB3B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="#090909"
                android:textColorHint="#0E0E0E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/add"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="#090909"
                android:textColorHint="#0E0E0E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtcontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/cont"
                android:inputType="phone"
                android:padding="15dp"
                android:textColor="#090909"
                android:textColorHint="#0E0E0E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="#090909"
                android:textColorHint="#0E0E0E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/upd"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/upd"
                android:textColor="#FFEB3B" />

            <Button
                android:id="@+id/del"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/del"
                android:textColor="#FFEB3B" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>