<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:hapticFeedbackEnabled="false"
    android:padding="10dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView6"
        style="@style/HeadText"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/eagle_lake"
        android:padding="5dp"
        android:text="       "
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="110dp"
        android:layout_toRightOf="@id/textView6"
        android:fontFamily="@font/eagle_lake"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:padding="10dp"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/usr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="100dp"
        android:background="#22211E"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#FFEB3B"
        android:textSize="18sp" />

</RelativeLayout>